--- a/web/progettazione/style.css
+++ b/web/progettazione/style.css
@@ -1,3 +1,55 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+
 body{
     background-color: #D8D8D8;
     margin: 0px;
@@ -7,7 +59,7 @@ body{
 
 a{
     text-decoration: none;
-
+    color: inherit;
 }
 
 a:visited{
@@ -23,6 +75,11 @@ a:visited{
     background-color: #4B3B30;
     height: 40px;
 }
+#left-social-bar,#marker-map, #right-social-bar{
+    position: relative;
+    top: 10px;
+    color: #fff;
+}
 
 #socialBar #left-social-bar{
     float: left;
@@ -34,17 +91,9 @@ a:visited{
     margin: 0 10px 0;
 }
 
-#socialBar #left-social-bar, #socialBar #right-social-bar, #socialBar #marker-map{
-    position: relative;
-    top: 10px;
-    color: #fff;
-}
-
-
 #socialBar #marker-map{
-    position: relative;
     left: 60px;
-
+    float: left;
 }
 
 #socialBar #right-social-bar{
@@ -132,16 +181,24 @@ a:visited{
     min-height: 420px;
 }
 
-#wrapper-slider #booknow{
+#wrapper-slider #booknow, #booknow2{
     width: 235px;
     height: 110px;
+    padding: 20px;
+    background-color: #4B3B30;
+    color: #fff;
+}
+
+#wrapper-slider #booknow{
     position: absolute;
     bottom: 30px;
     left: -20px;
     z-index: 101;
-    padding: 20px;
-    background-color: #4B3B30;
-    color: #fff;
+}
+
+#booknow2{
+    width: 334px;
+    margin-right: 27px;
 }
 
 #slogan{
@@ -301,10 +358,96 @@ hr{
 h3{
     margin: 0px;
     background-color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 13px 0 13px;
+}
+
+h2{
+    font-size: 24px;
+    font-weight: bold
+}
+
+#testo-evento{
+    min-height: 300px;
+    line-height: 1.8;
+    padding: 10px;
 }
 
 .one-third{
     width: 33%;
     float: left;
     background-color: #fff;
+}
+
+.second-menu{
+    width: 33% !important;
+    text-align: right !important;
+    list-style: none !important;
+    float: right !important;
+    margin-right: 30px !important;
+    height: 180px !important;
+}
+
+.booknow-wrapper{
+    float: right !important;
+}
+
+.event-list-wrapper .event-prev {
+    border-bottom: #dee0e0 1px solid;
+    padding: 0 0 20px 0;
+    margin: 0 0 20px 0;
+}
+
+
+.event-prev-date{
+    background: #e26143;
+}
+
+.event-prev .event-prev-date {
+    float: left;
+    width: 52px;
+    text-align: center;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.event-prev .event-prev-date .month {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 10px;
+    line-height: 1;
+    margin: 0;
+    padding: 4px 0 4px 0;
+}
+
+event-prev .event-prev-date .day {
+    font-size: 24px;
+    line-height: 1;
+    background: url(images/btn-bg1.png) #fff repeat-x center bottom;
+    border: #e3e3e3 1px solid;
+    -webkit-border-radius: 0 0 3px 3px;
+    -moz-border-radius: 0 0 3px 3px;
+    -o-border-radius: 0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
+    margin: 0;
+    padding: 5px 0 0 0;
+    height: 28px;
+}
+
+.event-list-wrapper{
+    padding: 10px;
+}
+
+#elenco-sagre{
+    float: left;
+    width: 60%;
+}
+
+#sidebars{
+    float:right;
+    width: 40%;
+    margin-bottom: 20px;
 }
