--- a/web/skins/system/css/layout.css
+++ b/web/skins/system/css/layout.css
@@ -584,7 +584,7 @@ float: left;
 border-bottom: 1px dotted #cccccc;
 }
 
-input[type=submit] {
+input[type=submit], input[type=reset] {
 background: #D0D1D4 url(../images/btn_submit.png) repeat-x;
 border: 1px solid #A8A9A8;
 -webkit-box-shadow: 0 1px 0 #fff;
@@ -601,7 +601,7 @@ text-shadow: 0 1px 0 #fff;
 cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover,input[type=reset]:hover {
 color: #333333;
 }
 
@@ -700,37 +700,38 @@ width: 200px;
 height: 25px;
 line-height: 25px;
 text-shadow: 0 1px 0 #fff;
-font-weight: bold;
+font-weight: 200;
 padding-left: 10px;
 margin: -5px 0 5px 0;
-text-transform: uppercase;
 }
 
-fieldset input[type=text] {
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-border: 1px solid #BBBBBB;
-height: 20px;
-color: #666666;
--webkit-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
--moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
-padding-left: 10px;
-background-position: 10px 6px;
-margin: 0;
-display: block;
-float: left;
-width: 96%;
-margin: 0 10px;
+fieldset input[type=text],fieldset input[type=password] {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #BBBBBB;
+    height: 20px;
+    color: #666666;
+    -webkit-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+    -moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+    box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+    padding-left: 10px;
+    background-position: 10px 6px;
+    margin: 0;
+    display: block;
+    float: left;
+    width: 96%;
+    margin: 0 10px;
+    background-color: #fff !important;
 }
 
-fieldset input[type=text]:focus {
-outline: none;
-border: 1px solid #77BACE;
--webkit-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
--moz-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+fieldset input[type=text]:focus,fieldset input[type=password]:focus {
+    outline: none;
+    border: 1px solid #77BACE;
+    -webkit-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+    -moz-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+    box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+    background-color: #fff !important;
 }
 
 fieldset select {
@@ -893,4 +894,48 @@ font-size: 14px;}
 
 .fifty-percent{
     width: 50%;
+}
+
+#sidebar li.icn_slider a {
+    background: url(../images/icn_slider.png) no-repeat center left;
+}
+
+.module_form {
+    margin: 20px 3% 0 3%;
+    margin-top: 20px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.module_form form{
+    width: 66%;
+    margin-right: 0;
+    float: left;
+}
+
+.module_form >fieldset{
+    width: 622px;
+    border: none;
+}
+
+.module_form>fieldset>fieldset{
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+#sidebar li.icn_page a {
+    background: url(../images/icn_page.png) no-repeat center left;
+}
+
+input:-webkit-autofill {
+    background-color: #fff !important;
+    background-image: none;
+    color: rgb(0, 0, 0);
+}
+
+.title-section{
+    font-weight: bold;
+    text-transform: uppercase;
 }
