--- a/web/skins/theme/css/style.css
+++ b/web/skins/theme/css/style.css
@@ -556,7 +556,7 @@ li.sfHover > a > .sf-sub-indicator {
 	position: relative;
 }
 
-#slides1 {
+#slides1, #map-widget-wrapper {
 	margin: 0 0 30px 0;
 }
 
@@ -1709,7 +1709,7 @@ span.zoom-wrapper span.zoom {
 	padding: 25px 0 0 0;
 }
 
-.booknow-accompage .price-detail {
+.booknow-accompage .price-detail, .booknow-accompage #cheap-price-detail  {
 	font-size: 21px;
 	font-style: italic;
 	font-weight: lighter;
@@ -2176,6 +2176,29 @@ span.zoom-wrapper span.zoom {
 
 .my-booknow{
     width: auto !important;
+}
+
+.page-header-img{
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+}
+
+.servizi-wrapper{
+    min-height: 128px;
+}
+
+.page-content #map-widget-wrapper #map-widget{
+    height: 324px !important;
+}
+
+.booknow-accompage .cheap-price-detail{
+    color: #9d8c81;
+    font-size: 21px;
+    font-style: italic;
+    font-weight: lighter;
+    display: block;
+    margin: -16px 0 20px 0;
 }
 /*
 #CDSWIDWRL {
