--- a/web/skins/system/css/layout.css
+++ b/web/skins/system/css/layout.css
@@ -97,8 +97,9 @@ background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;
 }
 
 section#secondary_bar .user {
-float: left;
-width: 23%;
+    position: relative;
+    width: 98%;
+    padding: 0 10px;
 height: 38px;
 }
 
@@ -115,12 +116,12 @@ line-height: 35px;
 text-indent: 25px;
 text-shadow: 0 1px 0 #fff;
 background: url(../images/icn_user.png) no-repeat center left;
-margin-left: 6%;
 }
 
 .user a {
 text-decoration: none;
-color: #666666}
+color: #666666
+}
 
 .user a:hover {
 color: #77BACE;
@@ -133,6 +134,8 @@ width: 16px;
 height: 35px;
 text-indent: -5000px;
 background: url(../images/icn_logout.png) center no-repeat;
+    position: absolute;
+    right: 0;
 }
 
 /* Breadcrumbs */
@@ -197,7 +200,8 @@ aside#sidebar {
 width: 23%;
 background: #E0E0E3 url(../images/sidebar.png) repeat;
 float: left;
-min-height: 100%;
+position: relative;
+min-height: 776px;
 margin-top: -4px;
 }
 
@@ -355,7 +359,8 @@ text-decoration: underline;
 }
 
 #sidebar footer {
-margin-top: 20%;
+    position: absolute;
+    bottom: 0;
 }
 
 
@@ -1129,4 +1134,19 @@ input[type=file]{
 .scroll-content{
     min-height: 100px;
     padding: 10px 0;
+}
+#becontent-presentation{
+    width: 70%;
+    margin: 12% auto;
+    line-height: 1.55;
+    border: 1px solid #E0E0E3;
+    padding: 10px;
+    box-shadow: 0px 0px 9px 6px #E0E0E3;
+    border-radius: 10px;
+}
+
+#becontent-presentation h1, #becontent-presentation h2{
+    font-family: 'Oregano', cursive;
+    font-size: 30px;
+    font-weight: 100;
 }
