bug lingua fix e progV2

--- a/web/skins/theme/css/style.css
+++ b/web/skins/theme/css/style.css
@@ -870,6 +870,10 @@ ol ol li {
 	color: #fff !important;
 }
 
+.button1:HOVER{
+    color: #000 !important;
+}
+
 .button2 {
     font-size: 12px;
 	font-weight: bold;
